--- a/Synthetic Sound Demo/design.css
+++ b/Synthetic Sound Demo/design.css
@@ -1,12 +1,18 @@
+.container {
+    
+}
+
 .pad-container {
     display: grid;
     column-gap: 50px;
     grid-template-columns: 40px 40px 40px 40px;
     height: 550px;
+    margin: auto;
     width:80%;
     background-image: url("Vice-City-wallpaper.jpg");
     background-size: cover;
     align-content: center;
+    border: 5px pink;
 }
 
 .pad-container, .pad-item {
@@ -24,3 +30,15 @@
     box-shadow: 1px 2px 3px black;
     color: darkgrey;
 }
+
+h1, p {
+    text-align: center;
+}
+
+.pad-item:hover {
+    background-color: rgb(243, 214, 249);
+    box-shadow: 0px 0px 5px rgb(243, 214, 249);
+    cursor: pointer;
+}
+
+
