--- a/Synthetic Sound Demo/design.css
+++ b/Synthetic Sound Demo/design.css
@@ -1,23 +1,61 @@
-.container {
-    
+body {
+    background-color: rgb(62, 22, 34);
+    color: aliceblue;
 }
 
-.pad-container {
+h1, p {
+    text-align: center;
+}
+
+.container {
     display: grid;
-    column-gap: 50px;
-    grid-template-columns: 40px 40px 40px 40px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr 1fr 0.2fr;
+    gap: 10px 0px;
+    grid-template-areas: 
+        "pack-name pack-name pad-header pad-header"
+        "pad-container pad-container video video"
+        "pad-container pad-container video video"
+        "footer footer footer footer"
+    ;
     height: 550px;
     margin: auto;
     width:80%;
     background-image: url("Vice-City-wallpaper.jpg");
     background-size: cover;
     align-content: center;
-    border: 5px pink;
+    border: 5px pink groove;
+    box-shadow: 1px 2px 3px black;
 }
 
-.pad-container, .pad-item {
-    border-radius: 10px 10px 10px 10px;
-    border-style: solid;
+.pack-name, .pad-header, h3, .footer {
+    color: rgb(243, 214, 249);
+    font-weight: bold;
+    /* font-style: italic; */
+    font-variant: small-caps;
+    font-family: cursive;
+}
+
+.pack-name {
+    grid-area: pack-name;
+    text-align: center;
+    margin-top: 20px;
+    margin-right: 100px;
+}
+
+.pad-header {
+    grid-area: pad-header;
+}
+
+.pack-name, .pad-header {
+    align-items:flex-start;
+}
+
+.pad-container {
+    grid-area: pad-container;
+    display: grid;
+    column-gap: 50px;
+    grid-template-columns: 40px 40px 40px 40px;
 }
 
 .pad-item {
@@ -31,7 +69,25 @@
     color: darkgrey;
 }
 
-h1, p {
+.container, .pad-item, .video {
+    border-radius: 10px 10px 10px 10px;
+    border-style: solid;
+}
+
+.video {
+    grid-area: video;
+    max-width: 450px;
+    max-height: 200px;
+    color: darkgrey;
+    background-color: rgb(42, 40, 40);
+    border-radius: 10px 10px 10px 10px;
+    border-style: inset;
+    border-width: thick;  
+}
+
+.footer {
+    grid-area: footer;
+    max-height: fit-content;
     text-align: center;
 }
 
@@ -40,5 +96,22 @@ h1, p {
     box-shadow: 0px 0px 5px rgb(243, 214, 249);
     cursor: pointer;
 }
+
+h3 {
+    border-bottom: double;
+    border-color:  rgb(243, 214, 249);
+}
+
+.pad-header > p {
+    color: rgb(243, 214, 249);
+    border-top: double;
+    border-color:  rgb(243, 214, 249);
+}
+
+/* This was before the online grid layout suggestion */
+
+
+
+
 
 
