--- a/Synthetic Sound Demo/design.css
+++ b/Synthetic Sound Demo/design.css
@@ -44,9 +44,9 @@ h1, p {
         "pad-container pad-container pad-buttons pad-buttons"
         "footer footer footer footer"
     ;
-    height: 550px;
+    height: 650px;
     margin: auto;
-    width:70%;
+    width: 1000px;
     background-image: url("Vice-City-wallpaper.jpg");
     background-size: cover;
     align-content: center;
@@ -85,7 +85,7 @@ h1, p {
     display: grid;
     column-gap: 50px;
     grid-template-columns: 40px 40px 40px 40px;
-    margin-left: 40px;
+    /* margin-left: 40px; */
 }
 
 .pad-item {
@@ -128,9 +128,12 @@ h1, p {
 }
 
 .pad-item:hover {
+    cursor: pointer;
+}
+
+.pad-item:active {
     background-color: rgb(243, 214, 249);
     box-shadow: 0px 0px 5px rgb(243, 214, 249);
-    cursor: pointer;
 }
 
 strong {
