--- a/Synthetic Sound Demo/card-mockup.css
+++ b/Synthetic Sound Demo/card-mockup.css
@@ -1,11 +1,18 @@
+html {
+    color: white;
+}
+
 body {
     background-color: black;
 }
 
 h1, h2 {
-    color: white;
     text-align: center;
 }
+ h3 {
+    display: flex;
+    align-items:flex-end;
+ }
 
 .container {
     display: grid;
@@ -28,7 +35,6 @@ h1, h2 {
 
 .title {
     grid-area: title;
-    color: whitesmoke;
 }
 
 .card {
